--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Jack Simm – Product Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
+    /* Reset & base */
     body {
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background-color: #f5f5f7;
-      color: #1c1c1e;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #fff;
+      color: #1d1d1f;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      line-height: 1.6;
     }
 
     header {
@@ -19,46 +24,55 @@
       justify-content: space-between;
       align-items: center;
       padding: 24px 64px;
-      background-color: white;
+      background: #fff;
+      border-bottom: 1px solid #d2d2d7;
       position: sticky;
       top: 0;
       z-index: 100;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-    }
-
-    .left {
-      font-size: 1.3rem;
       font-weight: 600;
-      color: #000;
+      font-size: 1.25rem;
       cursor: pointer;
+      user-select: none;
+      color: #000;
     }
 
     .dropdown {
       position: absolute;
-      top: 80px;
+      top: 72px;
       left: 64px;
-      background: white;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      border-radius: 8px;
+      background: #fff;
+      box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
+      border-radius: 12px;
       display: none;
       flex-direction: column;
+      min-width: 180px;
+      padding: 8px 0;
+      font-weight: 600;
+      font-size: 1rem;
     }
 
     .dropdown a {
-      padding: 14px 20px;
+      padding: 14px 24px;
       text-decoration: none;
-      color: #1c1c1e;
-      font-weight: 500;
+      color: #1d1d1f;
+      transition: background-color 0.25s ease;
+      border-radius: 8px;
+      font-weight: 600;
     }
 
     .dropdown a:hover {
-      background-color: #f0f0f0;
+      background-color: #f2f2f7;
     }
 
+    /* Banner with slideshow */
     .banner-section {
       position: relative;
-      height: 100vh;
+      height: 90vh;
       overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #fafafa;
     }
 
     .slide {
@@ -68,6 +82,8 @@
       object-fit: cover;
       opacity: 0;
       transition: opacity 4s ease-in-out;
+      top: 0;
+      left: 0;
     }
 
     .slide.active {
@@ -75,178 +91,243 @@
       z-index: 1;
     }
 
-    .profile-overlay {
-      position: absolute;
-      bottom: 80px;
-      left: 80px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 30px 50px;
-      border-radius: 16px;
-      display: flex;
+    /* Profile overlay removed for modern Apple style */
+
+    /* New About Me section at bottom */
+    .about-section {
+      max-width: 1000px;
+      margin: 100px auto 140px;
+      padding: 0 32px;
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 48px;
       align-items: center;
-      gap: 24px;
-      max-width: 600px;
-      z-index: 2;
     }
 
-    .profile-pic {
-      width: 100px;
-      height: 100px;
+    .about-image {
+      width: 280px;
+      aspect-ratio: 1 / 1;
       border-radius: 50%;
+      overflow: hidden;
+      box-shadow: 0 20px 40px rgb(0 0 0 / 0.1);
+      transition: transform 0.3s ease;
+      cursor: default;
+    }
+
+    .about-image img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-      filter: grayscale(100%);
-      border: 2px solid #000;
+      display: block;
+      filter: grayscale(0%);
+      transition: filter 0.3s ease;
     }
 
-    .titles h2 {
-      margin: 4px 0;
-      font-weight: 600;
-      font-size: 1.25rem;
+    .about-image:hover img {
+      filter: grayscale(0%);
+      transform: scale(1.05);
     }
 
-    .container {
-      max-width: 1100px;
-      margin: 80px auto;
-      padding: 0 40px;
-    }
-
-    .row {
+    .about-content {
       display: flex;
-      flex-wrap: wrap;
-      gap: 60px;
+      flex-direction: column;
+      gap: 20px;
     }
 
-    .column {
-      flex: 1;
-      min-width: 300px;
+    .about-content h2 {
+      font-weight: 700;
+      font-size: 2.5rem;
+      margin: 0;
+      color: #111;
     }
 
-    h3 {
+    .about-content p {
+      font-size: 1.125rem;
+      color: #3c3c43;
+      max-width: 550px;
+      line-height: 1.5;
+    }
+
+    /* Experience and Skills grid below About Me */
+    .exp-skills {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 48px;
+      margin-top: 64px;
+    }
+
+    .exp-skills h3 {
       font-size: 1.6rem;
+      font-weight: 700;
+      margin-bottom: 16px;
+      color: #111;
+    }
+
+    .exp-skills ul {
+      list-style: none;
+      padding-left: 0;
+      margin: 0;
+      color: #3c3c43;
+      font-weight: 500;
+      line-height: 1.5;
+    }
+
+    .exp-skills ul li {
       margin-bottom: 12px;
-      font-weight: 600;
+      padding-left: 14px;
+      position: relative;
     }
 
-    ul {
-      padding-left: 20px;
+    .exp-skills ul li::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 9px;
+      width: 6px;
+      height: 6px;
+      background: #0071e3;
+      border-radius: 50%;
     }
 
-    ul li {
-      margin-bottom: 10px;
-    }
-
+    /* Contact Section */
     .contact-section {
       text-align: center;
-      margin-top: 100px;
+      margin: 120px 0 60px;
+      font-weight: 600;
+      color: #1d1d1f;
     }
 
     .contact-links {
-      display: flex;
+      display: inline-flex;
+      gap: 40px;
+      margin-top: 24px;
       justify-content: center;
-      gap: 30px;
-      margin-top: 20px;
     }
 
     .contact-links a {
-      color: #1c1c1e;
-      text-decoration: none;
+      color: #1d1d1f;
+      transition: color 0.3s ease;
+    }
+
+    .contact-links a:hover,
+    .contact-links a:focus {
+      color: #0071e3;
+      outline: none;
     }
 
     .contact-links i,
     .contact-links svg {
       width: 28px;
       height: 28px;
-      stroke: #1c1c1e;
+      stroke-width: 2;
+      stroke: currentColor;
+      display: block;
     }
 
     footer {
       text-align: center;
-      padding: 40px;
+      padding: 40px 16px;
       font-size: 0.9rem;
-      color: #888;
+      color: #8e8e93;
+      border-top: 1px solid #d2d2d7;
+      font-weight: 500;
     }
 
-    @media (max-width: 768px) {
-      header {
-        padding: 20px;
+    @media (max-width: 900px) {
+      .about-section {
+        grid-template-columns: 1fr;
+        margin: 80px auto 100px;
+        padding: 0 24px;
+        text-align: center;
       }
-      .profile-overlay {
-        left: 20px;
-        right: 20px;
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 20px;
+
+      .about-image {
+        margin: 0 auto;
+        width: 180px;
       }
-      .titles h2 {
+
+      .about-content h2 {
+        font-size: 2rem;
+      }
+
+      .about-content p {
+        max-width: 100%;
         font-size: 1rem;
+      }
+
+      .exp-skills {
+        gap: 32px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header {
+        padding: 16px 24px;
+        font-size: 1.1rem;
       }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
-    <div class="dropdown" id="dropdownMenu">
+    <div class="left" onclick="toggleDropdown()" role="button" aria-haspopup="true" aria-expanded="false" tabindex="0">≡ Jack Simm</div>
+    <nav class="dropdown" id="dropdownMenu" aria-label="Primary Navigation">
       <a href="projects.html">Projects</a>
       <a href="gallery.html">Gallery</a>
       <a href="cv.html">CV</a>
-    </div>
+    </nav>
   </header>
 
-  <div class="banner-section">
+  <section class="banner-section">
     <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
     <img src="untitled.31.jpg" alt="Render 2" class="slide" />
     <img src="untitled.34.jpg" alt="Render 3" class="slide" />
     <img src="untitled.36.jpg" alt="Render 4" class="slide" />
     <img src="untitled.37.jpg" alt="Render 5" class="slide" />
+  </section>
 
-    <div class="profile-overlay">
-      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
-      <div class="titles">
-        <h2>Jack Simm</h2>
-        <h2>Product Designer</h2>
-        <h2>Product Development Manager</h2>
+  <section class="about-section" aria-label="About Me">
+    <div class="about-image" aria-hidden="true">
+      <img src="profile.jpg" alt="Portrait of Jack Simm" />
+    </div>
+    <div class="about-content">
+      <h2>Jack Simm</h2>
+      <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
+      <div class="exp-skills">
+        <div>
+          <h3>Experience</h3>
+          <ul>
+            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+            <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+            <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Skills</h3>
+          <ul>
+            <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+            <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+            <li><strong>Rapid Prototyping</strong></li>
+            <li><strong>User-Centred Design</strong></li>
+            <li><strong>Production Coordination</strong></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="container">
-    <div class="row">
-      <div class="column">
-        <h3>About Me</h3>
-        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
-      </div>
-      <div class="column">
-        <h3>Experience</h3>
-        <ul>
-          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-        </ul>
-        <h3>Skills</h3>
-        <ul>
-          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-          <li><strong>Rapid Prototyping</strong></li>
-          <li><strong>User-Centred Design</strong></li>
-          <li><strong>Production Coordination</strong></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="contact-section">
+  <section class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
         <i data-feather="mail"></i>
       </a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank" rel="noopener" aria-label="Instagram">
         <i data-feather="instagram"></i>
       </a>
     </div>
-  </div>
+  </section>
 
   <footer>&copy; 2025 Jack Simm – Portfolio</footer>
 
@@ -255,6 +336,8 @@
     const menu = document.getElementById("dropdownMenu");
 
     toggle.addEventListener("click", () => {
+      const expanded = toggle.getAttribute('aria-expanded') === 'true';
+      toggle.setAttribute('aria-expanded', String(!expanded));
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
