--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       line-height: 1.6;
+      overflow-x: hidden;
     }
 
     header {
@@ -69,9 +70,6 @@
       position: relative;
       height: 90vh;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       background: #fafafa;
     }
 
@@ -91,108 +89,63 @@
       z-index: 1;
     }
 
-    /* Profile overlay removed for modern Apple style */
-
-    /* New About Me section at bottom */
-    .about-section {
-      max-width: 1000px;
-      margin: 100px auto 140px;
-      padding: 0 32px;
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      gap: 48px;
+    /* About Me overlay on banner */
+    .about-overlay {
+      position: absolute;
+      bottom: 80px;
+      left: 64px;
+      background: rgba(255 255 255 / 0.9);
+      padding: 40px 50px;
+      border-radius: 24px;
+      display: flex;
       align-items: center;
+      gap: 32px;
+      max-width: 720px;
+      box-shadow: 0 20px 40px rgb(0 0 0 / 0.1);
+      backdrop-filter: saturate(180%) blur(20px);
+      z-index: 10;
     }
 
-    .about-image {
-      width: 280px;
-      aspect-ratio: 1 / 1;
+    .profile-pic {
+      flex-shrink: 0;
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
-      overflow: hidden;
-      box-shadow: 0 20px 40px rgb(0 0 0 / 0.1);
+      object-fit: cover;
+      filter: grayscale(0%);
+      border: 3px solid #000;
+      box-shadow: 0 8px 16px rgb(0 0 0 / 0.12);
       transition: transform 0.3s ease;
       cursor: default;
     }
 
-    .about-image img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      filter: grayscale(0%);
-      transition: filter 0.3s ease;
-    }
-
-    .about-image:hover img {
-      filter: grayscale(0%);
+    .profile-pic:hover {
       transform: scale(1.05);
     }
 
-    .about-content {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    .about-text {
+      max-width: 480px;
+      color: #1d1d1f;
     }
 
-    .about-content h2 {
+    .about-text h2 {
       font-weight: 700;
       font-size: 2.5rem;
-      margin: 0;
-      color: #111;
+      margin: 0 0 14px 0;
+      line-height: 1.1;
     }
 
-    .about-content p {
+    .about-text p {
       font-size: 1.125rem;
-      color: #3c3c43;
-      max-width: 550px;
       line-height: 1.5;
-    }
-
-    /* Experience and Skills grid below About Me */
-    .exp-skills {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 48px;
-      margin-top: 64px;
-    }
-
-    .exp-skills h3 {
-      font-size: 1.6rem;
-      font-weight: 700;
-      margin-bottom: 16px;
-      color: #111;
-    }
-
-    .exp-skills ul {
-      list-style: none;
-      padding-left: 0;
+      color: #3c3c43;
       margin: 0;
-      color: #3c3c43;
-      font-weight: 500;
-      line-height: 1.5;
-    }
-
-    .exp-skills ul li {
-      margin-bottom: 12px;
-      padding-left: 14px;
-      position: relative;
-    }
-
-    .exp-skills ul li::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 9px;
-      width: 6px;
-      height: 6px;
-      background: #0071e3;
-      border-radius: 50%;
     }
 
     /* Contact Section */
     .contact-section {
       text-align: center;
-      margin: 120px 0 60px;
+      margin: 100px 0 60px;
       font-weight: 600;
       color: #1d1d1f;
     }
@@ -233,30 +186,31 @@
       font-weight: 500;
     }
 
+    /* Responsive */
     @media (max-width: 900px) {
-      .about-section {
-        grid-template-columns: 1fr;
-        margin: 80px auto 100px;
-        padding: 0 24px;
+      .about-overlay {
+        flex-direction: column;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 90vw;
+        padding: 32px 28px;
+        gap: 24px;
+      }
+
+      .profile-pic {
+        width: 120px;
+        height: 120px;
+      }
+
+      .about-text h2 {
+        font-size: 1.9rem;
         text-align: center;
       }
 
-      .about-image {
-        margin: 0 auto;
-        width: 180px;
-      }
-
-      .about-content h2 {
-        font-size: 2rem;
-      }
-
-      .about-content p {
-        max-width: 100%;
+      .about-text p {
         font-size: 1rem;
-      }
-
-      .exp-skills {
-        gap: 32px;
+        text-align: center;
       }
     }
 
@@ -278,41 +232,18 @@
     </nav>
   </header>
 
-  <section class="banner-section">
+  <section class="banner-section" aria-label="Banner with renders">
     <img src="Exploded Organiser.32.jpg" alt="Render 1" class="slide active" />
     <img src="untitled.31.jpg" alt="Render 2" class="slide" />
     <img src="untitled.34.jpg" alt="Render 3" class="slide" />
     <img src="untitled.36.jpg" alt="Render 4" class="slide" />
     <img src="untitled.37.jpg" alt="Render 5" class="slide" />
-  </section>
 
-  <section class="about-section" aria-label="About Me">
-    <div class="about-image" aria-hidden="true">
-      <img src="profile.jpg" alt="Portrait of Jack Simm" />
-    </div>
-    <div class="about-content">
-      <h2>Jack Simm</h2>
-      <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
-      <div class="exp-skills">
-        <div>
-          <h3>Experience</h3>
-          <ul>
-            <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-            <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
-            <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
-            <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
-          </ul>
-        </div>
-        <div>
-          <h3>Skills</h3>
-          <ul>
-            <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
-            <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
-            <li><strong>Rapid Prototyping</strong></li>
-            <li><strong>User-Centred Design</strong></li>
-            <li><strong>Production Coordination</strong></li>
-          </ul>
-        </div>
+    <div class="about-overlay" aria-label="About Jack Simm">
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
+      <div class="about-text">
+        <h2>Jack Simm</h2>
+        <p>I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions.</p>
       </div>
     </div>
   </section>
@@ -339,6 +270,14 @@
       const expanded = toggle.getAttribute('aria-expanded') === 'true';
       toggle.setAttribute('aria-expanded', String(!expanded));
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    });
+
+    // Hide dropdown if clicking outside
+    document.addEventListener("click", (e) => {
+      if (!toggle.contains(e.target) && !menu.contains(e.target)) {
+        menu.style.display = "none";
+        toggle.setAttribute('aria-expanded', 'false');
+      }
     });
 
     const slides = document.querySelectorAll('.slide');
