--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/feather-icons"></script>
   <style>
-    /* Reset & base */
+    /* Base reset and fonts */
     body {
       margin: 0;
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -20,57 +20,70 @@
       overflow-x: hidden;
     }
 
+    /* HEADER */
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 24px 64px;
+      padding: 28px 80px;
       background: #fff;
       border-bottom: 1px solid #d2d2d7;
       position: sticky;
       top: 0;
       z-index: 100;
       font-weight: 600;
-      font-size: 1.25rem;
+      font-size: 1.3rem;
       cursor: pointer;
       user-select: none;
       color: #000;
+      transition: box-shadow 0.25s ease;
+    }
+
+    header:hover {
+      box-shadow: 0 2px 8px rgb(0 0 0 / 0.07);
+    }
+
+    .left {
+      letter-spacing: 0.04em;
     }
 
     .dropdown {
       position: absolute;
       top: 72px;
-      left: 64px;
+      left: 80px;
       background: #fff;
-      box-shadow: 0 10px 30px rgb(0 0 0 / 0.1);
-      border-radius: 12px;
+      box-shadow: 0 12px 40px rgb(0 0 0 / 0.12);
+      border-radius: 16px;
       display: none;
       flex-direction: column;
-      min-width: 180px;
-      padding: 8px 0;
+      min-width: 200px;
+      padding: 12px 0;
       font-weight: 600;
       font-size: 1rem;
+      user-select: none;
     }
 
     .dropdown a {
-      padding: 14px 24px;
+      padding: 16px 32px;
       text-decoration: none;
       color: #1d1d1f;
-      transition: background-color 0.25s ease;
-      border-radius: 8px;
-      font-weight: 600;
+      transition: background-color 0.3s ease;
+      border-radius: 12px;
     }
 
     .dropdown a:hover {
       background-color: #f2f2f7;
     }
 
-    /* Banner with slideshow */
+    /* BANNER */
     .banner-section {
       position: relative;
       height: 90vh;
       overflow: hidden;
       background: #fafafa;
+      display: flex;
+      align-items: center;
+      padding-left: 80px;
     }
 
     .slide {
@@ -82,6 +95,7 @@
       transition: opacity 4s ease-in-out;
       top: 0;
       left: 0;
+      z-index: 0;
     }
 
     .slide.active {
@@ -89,37 +103,36 @@
       z-index: 1;
     }
 
-    /* About Me overlay on banner (slimmer) */
+    /* ABOUT OVERLAY */
     .about-overlay {
-      position: absolute;
-      bottom: 60px;
-      left: 48px;
-      background: rgba(255 255 255 / 0.7);
-      padding: 28px 36px;
-      border-radius: 20px;
+      position: relative;
+      background: rgba(255 255 255 / 0.72);
+      padding: 28px 40px;
+      border-radius: 24px;
       display: flex;
       align-items: center;
-      gap: 24px;
+      gap: 28px;
       max-width: 520px;
-      box-shadow: 0 24px 40px rgb(0 0 0 / 0.08);
+      box-shadow: 0 32px 60px rgb(0 0 0 / 0.10);
       backdrop-filter: saturate(180%) blur(12px);
       z-index: 10;
+      animation: fadeInUp 1s ease forwards;
     }
 
     .profile-pic {
       flex-shrink: 0;
-      width: 120px;
-      height: 120px;
+      width: 130px;
+      height: 130px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(0%);
-      box-shadow: 0 8px 20px rgb(0 0 0 / 0.08);
+      box-shadow: 0 12px 32px rgb(0 0 0 / 0.12);
       cursor: default;
       transition: transform 0.3s ease;
     }
 
     .profile-pic:hover {
-      transform: scale(1.05);
+      transform: scale(1.06);
     }
 
     .about-text {
@@ -130,8 +143,8 @@
 
     .about-text h2 {
       font-weight: 300;
-      font-size: 2.4rem;
-      margin: 0 0 8px 0;
+      font-size: 2.8rem;
+      margin: 0 0 12px 0;
       line-height: 1.1;
       letter-spacing: -0.02em;
       color: #111;
@@ -139,31 +152,33 @@
 
     .about-text p {
       font-weight: 300;
-      font-size: 1.15rem;
-      line-height: 1.6;
+      font-size: 1.25rem;
+      line-height: 1.65;
       color: #4a4a4a;
       margin: 0;
       letter-spacing: 0.01em;
     }
 
-    /* Contact Section */
+    /* CONTACT */
     .contact-section {
       text-align: center;
-      margin: 100px 0 60px;
+      margin: 140px 0 80px;
       font-weight: 600;
       color: #1d1d1f;
+      animation: fadeIn 1.2s ease forwards;
     }
 
     .contact-links {
       display: inline-flex;
-      gap: 40px;
-      margin-top: 24px;
+      gap: 48px;
+      margin-top: 32px;
       justify-content: center;
     }
 
     .contact-links a {
       color: #1d1d1f;
       transition: color 0.3s ease;
+      outline-offset: 4px;
     }
 
     .contact-links a:hover,
@@ -174,54 +189,89 @@
 
     .contact-links i,
     .contact-links svg {
-      width: 28px;
-      height: 28px;
-      stroke-width: 2;
+      width: 32px;
+      height: 32px;
+      stroke-width: 2.5;
       stroke: currentColor;
       display: block;
     }
 
     footer {
       text-align: center;
-      padding: 40px 16px;
-      font-size: 0.9rem;
+      padding: 48px 24px;
+      font-size: 1rem;
       color: #8e8e93;
       border-top: 1px solid #d2d2d7;
       font-weight: 500;
+      letter-spacing: 0.04em;
+      user-select: none;
+      animation: fadeIn 1.5s ease forwards;
     }
 
-    /* Responsive */
+    /* ANIMATIONS */
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    /* RESPONSIVE */
     @media (max-width: 900px) {
+      header {
+        padding: 20px 48px;
+        font-size: 1.1rem;
+      }
+
+      .banner-section {
+        padding-left: 40px;
+        justify-content: center;
+      }
+
       .about-overlay {
-        flex-direction: column;
-        bottom: 40px;
-        left: 50%;
-        transform: translateX(-50%);
         max-width: 90vw;
-        padding: 24px 24px;
+        padding: 24px 28px;
         gap: 20px;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
 
       .profile-pic {
-        width: 100px;
-        height: 100px;
+        width: 110px;
+        height: 110px;
       }
 
       .about-text h2 {
-        font-size: 1.8rem;
-        text-align: center;
+        font-size: 2.2rem;
       }
 
       .about-text p {
-        font-size: 1rem;
-        text-align: center;
+        font-size: 1.1rem;
       }
     }
 
     @media (max-width: 480px) {
       header {
         padding: 16px 24px;
-        font-size: 1.1rem;
+        font-size: 1rem;
+      }
+
+      .contact-section {
+        margin: 100px 20px 60px;
+      }
+
+      .contact-links {
+        gap: 32px;
       }
     }
   </style>
@@ -255,10 +305,10 @@
   <section class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
-      <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
+      <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm" tabindex="0">
         <i data-feather="mail"></i>
       </a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank" rel="noopener" aria-label="Instagram">
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank" rel="noopener" aria-label="Instagram" tabindex="0">
         <i data-feather="instagram"></i>
       </a>
     </div>
@@ -270,10 +320,18 @@
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
-    toggle.addEventListener("click", () => {
+    function toggleDropdown() {
       const expanded = toggle.getAttribute('aria-expanded') === 'true';
       toggle.setAttribute('aria-expanded', !expanded);
       menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    }
+
+    toggle.addEventListener("click", toggleDropdown);
+    toggle.addEventListener("keydown", (e) => {
+      if (e.key === 'Enter' || e.key === ' ') {
+        e.preventDefault();
+        toggleDropdown();
+      }
     });
 
     const slides = document.querySelectorAll('.slide');
